# perseus

./: .coveragerc  .env  .env.example  .gitattributes  .gitignore  404.html  AGENTS.md  BRIEFING_README_PHASE24.md  CHANGELOG.md  CLAIMS-AUDIT.md  CLAUDE_DESIGN_PROMPT.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_REVISION_BRIEF.md  Dockerfile  FABLE5-HANDOFF.md  HANDOFF-2026-06-12.md  HANDOFF-v1.0.6.md  HANDOFF.md  INSTALL.md  MANIFEST.in  NOTICE  OUTREACH_PROMPT.md  OUTREACH_TARGETS.md  PATCH_PLAN.md  QUICKSTART.md  README.md  README_REDESIGN_PROMPT.md  ROADMAP.md  SBOM.md  SECURITY.md  SETUP-GUIDE.md  SHOW_HN_DRAFT.md  SKILL.md  SUPPORT.md  UNLOCK-CONFIG-GUARD.md  WIRING.md  claims.json  debug_import.py  (+22 more)
.claude/: review-prompt.txt  settings.json
.githooks/: pre-commit  pre-push
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.perseus/: context.md
.reasonix/: config.json
anna-recall/: index.html
assets/: fonts.css  perseus.css  perseus.js  site.css  tokens.css
bench/: CNAME  bench_context.md  index.html  sibyl-perseus-benchmark.md
benchmark/: 10k_results.json  COLD-START-BENCHMARK-2026-05-23.md  COLD-START-BENCHMARK-ENTERPRISE-2026-05-23.md  COLD-START-BENCHMARK-ENTERPRISE-SCALING.md  ISSUE_PAYLOADS_2026-05-29.md  README.md  README_EXTREME.md  adversarial_extended.py  adversarial_extended_results.json  apply_coldwarm.py  bench_lib.py  break-100000.md  break-50000.md  breaking-point.json  cache_thrash.py  cached-10000.md  codex_measurements.json  cold-vs-warm.json  coldwarm-10000.md  coldwarm-20000.md  coldwarm-5000.md  dup-10000.md  dup-20000.md  dup-5000.md  enterprise-30-node.json  enterprise-swarm.json  enterprise_day.py  enterprise_day_results.json  extreme-stress-20260523-175822.json  extreme_enterprise_benchmark.py  extreme_enterprise_report.txt  extreme_enterprise_report_full.txt  extreme_enterprise_results.json  extreme_enterprise_results_full.json  extreme_results.json  extreme_week.py  extreme_week_results.json  final-100.md  final-1000.md  final-10000.md  (+33 more)
benchmarks/: index.html
blast-radius/: index.html
cloud/: index.html
context-engine/: index.html
crewai/: index.html
demo/: index.html
docs/: AGENT_SURFACES.md  CITED_SYNTHESIS.md  CLI.md  CONTAINER.md  CONTEXT-ADAPTER-SDK.md  CONTEXT_PACKS.md  CONTRIBUTING.md  DECENTRALIZED_FEDERATION.md  DEPLOYMENT.md  DIRECTIVES.md  EXAMPLES.md  EXPORT-CONTROL.md  HERMES_INTEGRATION.md  PERFORMANCE.md  PERSEUS_PRODUCT_REPORT.md  PRODUCT_CONTRACT.md  RC_CHECKLIST.md  RESOLVER_VS_GENERATOR.md  SBOM.md  SECURITY-INDEX.md  SECURITY-MILESTONES.md  agent-onboarding-prompt.md  claims-pipeline.md  competitive-analysis-phase1.md  complementary-tools.md  composite-retrieval-ranking.md  design-partner-onboarding.md  directive-registry.md  federal-buyers.md  grounding-ablation-benchmark.md  index.md  memory-backend-comparison.md  mneme-vault-format.md  nexo-integration-guide.md  phase2-deep-integration.md  predictive-validation-plumbing.md  quickstart.md  reflective-queries.md  retrieval-orchestration-policy.md  security-review-2026-07-05.md  (+6 more)
examples/: README.md  mcp-service-integration.md  startup-memory-benchmark-pack.md
government/: capability-statement.html  index.html
hackathon/: agent-builder-config.yaml  agent.py
harness/: index.html
integrations/: README.md  invarium.md
mcts/: index.html
mcts_analysis/: history.json  scan-report.html  scan-report.json  scan-report.sarif
mimir/: index.html
mneme/: index.html
outreach/: tier1-messages-thomas.md  tier1-messages.md
perseus-vault/: index.html
plutus/: index.html
pr-pilot/: index.html
qwen-memory/: index.html
rapid-agent/: index.html
readme-preview/: index.html
reddit-variants/: r-localllama.md  r-opensource.md  r-programming.md  r-python.md
schemas/: query.schema.yaml
scripts/: bootstrap.sh  build.py  demo.sh  git-filter-pii.sh  install.sh  migrate-mneme-vault.py  perseus-cyberpunk.theme  regression.py  release.sh  render_claims.py  showhn-swarm-demo.py  split.py
services/: index.html
spec/: components.md  data-model.md  directives.md  integration.md  oracle.md  overview.md  pythia.md
src/: sibyl_mcp_server.py
tasks/: README.md  task-01-provider-agnostic.md  task-02-phase5-llm-flag.md  task-03-checkpoint-diffing.md  task-04-agora.md  task-05-context-health.md  task-05-daedalus.md  task-06-daedalus.md  task-07-multi-workspace-namespacing.md  task-08-list-and-tree-directives.md  task-09-cache-persist-and-mock.md  task-10-suggest-ux-flags.md  task-100-conflict-detection-merge.md  task-101-provenance-chain.md  task-11-systemd-integration.md  task-12-mneme-narrative-memory.md  task-13-if-query-condition.md  task-14-query-fallback.md  task-15-agent-directive.md  task-16-agent-inbox.md  task-17-template-gallery.md  task-18-perseus-serve.md  task-19-mneme-federation.md  task-20-daedalus-self-rating.md  task-21-trained-pattern-extraction.md  task-22-drift-detection.md  task-23-context-system-cleanup.md  task-23-lsp-server.md  task-24-vscode-extension.md  (+58 more)
(+650 files in other folders)
