[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perseus-ctx"
version = "1.0.7"
description = "Live context engine for AI assistants — resolve before context, zero cold-start tax."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "tcconnally" }]
keywords = ["ai", "context", "assistant", "cli", "hermes", "claude", "cursor", "codex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = ["pyyaml", "google-genai>=1.0.0", "elasticsearch>=8.0.0,<9.0.0"]

[project.optional-dependencies]
dev = ["pytest", "coverage", "hypothesis"]
mcp = ["mcp", "sibyl-memory-client"]

[project.urls]
Homepage = "https://github.com/tcconnally/perseus"
Documentation = "https://github.com/tcconnally/perseus/blob/main/docs/index.md"
Repository = "https://github.com/tcconnally/perseus"
"Bug Tracker" = "https://github.com/tcconnally/perseus/issues"

[project.scripts]
perseus = "perseus:main"
sibyl-mcp-server = "sibyl_mcp_server:main"

[tool.setuptools]
py-modules = ["perseus", "sibyl_mcp_server"]
