[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perseus-ctx"
version = "1.0.7"
description = "Live context engine for AI assistants — resolve before context, zero cold-start tax."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Perseus Computing LLC", email = "perseus@perseus.observer" }]
keywords = ["ai", "context", "assistant", "cli", "hermes", "claude", "cursor", "codex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "coverage", "hypothesis"]
mcp = ["mcp"]

[project.urls]
Homepage = "https://github.com/Perseus-Computing-LLC/perseus"
Documentation = "https://github.com/Perseus-Computing-LLC/perseus/blob/main/docs/index.md"
Repository = "https://github.com/Perseus-Computing-LLC/perseus"
"Bug Tracker" = "https://github.com/Perseus-Computing-LLC/perseus/issues"

[project.scripts]
perseus = "perseus:main"

[tool.setuptools]
py-modules = ["perseus"]
